# Codex-ai-news-reports

./: AGENTS.md  AGENTS_Reddit.md  AGENTS_Reddit_Simple.md  AGENTS_github_trending.md  AGENTS_rss.md  README.md  TURSO_script.py  [シンプル]動くTURSOコード.ipynb  generate_report.py  hello.py  main.py  push_reports.py  pyproject.toml  temp_generate_report.py  temp_inspect.py  temp_script.py  temp_tasklist.md  turso_push.py  uvの使い方.md  verify_report.py  ＜old＞AGENTS.md
reports/: ai-news-summary-20250928-test.md  ai-news-summary-20250928.md  codex_raw_output_20251003.txt  codex_raw_output_20251005.txt  codex_raw_output_20251007.txt  codex_raw_output_20251011.txt
reports/2025-09-29/: report.json
reports/2025-09-30/: report.json
reports/2025-10-01/: report.json  report.md
reports/2025-10-02/: report.json
reports/2025-10-03/: report_ai.json  report_ai.md  report_github_trending.json  report_github_trending.md  report_reddit.json  report_reddit.md  report_rss.json  report_rss.md  rss_sources.json
reports/2025-10-05/: report.json  report_ai.json  report_ai.md  report_github_trending.md  report_github_trending_raw.json  report_reddit.json  report_reddit.md  report_reddit_raw.json  report_rss.json  report_rss.md  rss_sources.json
reports/2025-10-06/: report_github_trending.md  report_github_trending_raw.json  report_reddit.json  report_reddit.md  report_reddit_raw.json  report_rss.json  report_rss.md  rss_sources.json
scripts/: codex_daily_with_agents.py  feed.toml  get_github_trending.py  get_rss.py  github_trending.py  tech_feed.py  turso_push_report.py
(+47 files in other folders)
