[project]
name = "codex-ai-news-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.112.4",
    "libsql==0.1.11",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "uvicorn==0.25.0",
    "requests>=2.31.0",
    "chardet==5.2.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.11",
]
